--- a/notebooks/pyspark/basics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
+++ b/notebooks/pyspark/basics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "# 1. Window function in spark\n",
+    "# Window function in spark\n",
     "\n",
     "A window function performs a calculation across a set of rows(aka. Frame). The built-in\n",
     "window functions provided by Spark SQL include two categories:\n",
@@ -16,42 +16,86 @@
     "- Analytic functions:\n",
     "\n",
     "\n",
-    "## 1.1 Window specification\n",
+    "## 1 Window specification\n",
     "To use window functions, we need to create a **window specification**. A window specification defines which rows\n",
     "are included in the frame associated with a given input row. In another word, the window specification defines\n",
     "the default frame of a window. A window specification can be classified into three categories:\n",
     "\n",
-    "1. PartitionBy specification:\n",
-    "       - Created with Window.partitionBy on one or more columns\n",
-    "       - All rows that have the same value on the partitionBy column will be in the same frame.\n",
-    "       - The aggregation functions can be applied on each frame\n",
-    "       - The windows functions can not be applied.\n",
+    "1. PartitionBy specification\n",
+    "2. Ordered specification\n",
+    "3. Custom Range Frame specification\n",
     "\n",
     "\n",
-    "2. Ordered specification:\n",
-    "       - Created by using a partitionBy specification, followed by an orderBy specification\n",
-    "       - The frame is not static, it moves when we iterate each row. By default, the frame contains\n",
-    "         all previous rows and the currentRow.\n",
-    "       - The window function can be applied to each moving frame (i.e. currentRow+allPreviousRow)\n",
-    "       - The aggregation functions can be applied to each moving frame. As each row has a different\n",
-    "         frame, the result of the aggregation is different for each row. Unlike the partitionBy\n",
-    "         specification, all rows in the same partition has the same result.\n",
+    "### 1.1 PartitionBy specification\n",
     "\n",
-    "3. Custom Range Frame specification: (check exp4)\n",
-    "       - Created by using a partitionBy specification,\n",
-    "       - Usually followed by an orderBy specification,\n",
-    "       - Then followed by \"rangeBetween\" or \"rowsBetween\"\n",
-    "       - Each row has a corresponding frame which is controlled by rangeBetween or rowsBetween. For example,\n",
-    "         rowsBetween(-3,Window.currentRow) means the three rows preceding the current row to the current row.\n",
-    "         It defines a frame including the current input row and three rows appearing before the current row.\n",
-    "       - Aggregation can be applied on each frame.\n",
+    "The partitionBy specification has the below properties:\n",
+    "\n",
+    "- Created with Window.partitionBy on one or more columns\n",
+    "- All rows that have the same value on the partitionBy column will be in the same frame.\n",
+    "- The aggregation functions can be applied on each frame\n",
+    "- The windows functions can not be applied.\n",
+    "\n",
+    "Below is an example, we partition the dataframe with the value of the column `name` of the dataset.\n",
+    "```text\n",
+    "win_name = Window.partitionBy(\"name\")\n",
+    "```\n",
+    "\n",
+    "### 1.2 Ordered specification:\n",
+    "\n",
+    "The Ordered specification has the below properties:\n",
+    "\n",
+    "- Created by using a partitionBy specification, followed by an orderBy specification\n",
+    "- The frame is not static, it moves when we iterate each row. By default, the frame contains\n",
+    " all previous rows and the currentRow.\n",
+    "- The window function can be applied to each moving frame (i.e. currentRow+allPreviousRow)\n",
+    "- The aggregation functions can be applied to each moving frame. As each row has a different\n",
+    " frame, the result of the aggregation is different for each row. Unlike the partitionBy\n",
+    " specification, all rows in the same partition has the same result.\n",
+    "\n",
+    "Below is an example, we partition the dataframe with the value of the column `name` of the dataset, then order the row of each partition with the value order of the column `price`.\n",
+    "```text\n",
+    "win_name = Window.partitionBy(\"name\").orderBy(\"price\")\n",
+    "```\n",
+    "\n",
+    "### 1.3 Custom Range Frame specification: (check exp4)\n",
+    "\n",
+    "- Created by using a partitionBy specification,\n",
+    "- Usually followed by an orderBy specification,\n",
+    "- Then followed by \"rangeBetween\" or \"rowsBetween\"\n",
+    "- Each row has a corresponding frame which is controlled by rangeBetween or rowsBetween. For example,\n",
+    " rowsBetween(-3,Window.currentRow) means the three rows preceding the current row to the current row.\n",
+    " It defines a frame including the current input row and three rows appearing before the current row.\n",
+    "- Aggregation can be applied on each frame.\n",
     "\n",
     "\n",
-    "In spark SQL, the partition specification are defined by keyword \"partitionBy\", ordering specification is defined by\n",
-    "keyword \"orderBy\".\n",
+    "#### 1.3.1 Range between\n",
+    "\n",
+    "**rangeBetween**: uses current **row value** as base index (i.e. 0), and offset to specify start or end.\n",
+    "- -666: all the row that contains value is < current row value and > current_row_value - 666 \n",
+    "- 0: current row\n",
+    "- 666: all the row that contains value is > current row value and < current_row_value + 666\n",
+    "\n",
+    "In another word, it defines the `frame boundaries based on the values of the order column in the partition that fall within a specified range relative to the current row's value`. \n",
+    " \n",
+    "Below is an example, we partition the dataframe with the value of the column `name` of the dataset, then order the row of each partition with the value order of the column `price`, the frame is dynamic which is calculated\n",
+    "based on the `price value of current row`. In the current row, if the price value is 20, the frame should contain all rows which price value is between 0 and 40 in the same partition.\n",
+    "\n",
+    "```text\n",
+    "win_name = Window.partitionBy(\"name\").orderBy(\"price\").rangeBetween(-20,20)\n",
+    "```\n",
+    "\n",
+    "#### 1.3.2 Rows between\n",
+    "\n",
+    "**rowsBetween**: uses current row as base index (i.e. 0), and offset to specify start or end.\n",
+    "- -1: one row before current row\n",
+    "- 0: current row\n",
+    "- 1: one row after current row\n",
+    "\n",
+    "In another word, it defines the frame boundaries based on `the number of rows before and after the current row` within the partition.\n",
     "\n",
     "\n",
-    "## 1.2 Windows function can be divided into following categories\n",
+    "\n",
+    "## 2 Windows function can be divided into following categories\n",
     "\n",
     "1. Ranking functions:\n",
     "  - rank: returns the rank of rows within a window partition\n",
@@ -70,7 +114,7 @@
     "   - currentRow(): Window function: returns the special frame boundary that represents the current row in\n",
     "                          the window partition.\n",
     "3. Aggregation functions: All the aggregation function that we showed in S03_GroupByAndAggregation can be used here.\n",
-    "   - sum(e:Column): returns the sum of selecting column for each partitions.\n",
+    "   - sum(e:Column): returns the sum of selecting column for each partition.\n",
     "   - first(e:Column): returns the first value within each partition.\n",
     "   - last(e:Column): returns the last value within each partition."
    ]
