--- a/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
@@ -3,26 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Calculate distance"
+    "# Calculate distance\n",
+    "\n",
+    "In this notebook, we will learn how to use sedona to calculate the distance of two geometry objects (e.g. point, polygone).\n",
+    "\n",
+    "There are three types of distance calculation:\n",
+    "- distance between two points(e.g. two gps coordinates)\n",
+    "- distance between a point and a polygone\n",
+    "- distance between two polygones\n",
+    "\n"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -116,7 +106,11 @@
    "source": [
     "## 1. Euclidean distance between A and B\n",
     "\n",
-    "**ST_Distance (A:geometry, B:geometry)**"
+    "In a 2D map, the distance between two geometry objects is a simple euclidean distance.\n",
+    "\n",
+    "Sedona provides a predefine function to this calculation **ST_Distance (A:geometry, B:geometry)**.\n",
+    "\n",
+    "Below is an example of how to calculate the distance between two points."
    ],
    "metadata": {
     "collapsed": false
@@ -219,13 +213,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Distance between two polygon\n",
+    "## 3. Distance between two polygon\n",
     "\n",
     "The distance between two points is simple to calculate. How do we calculate the distance between two polygon.\n",
     "\n",
     "The nature thinking is to first get the centroid of the polygon, then calculate the distance of the two centroids of the two polygons.\n",
     "\n",
-    "To simplify our life, the function ST_Distance can already calculate the distance of the two polygons directly"
+    "To simplify our life, the function **ST_Distance takes two geometry object**. It means we don't need to do extra action, this function can already calculate the distance of the two polygons directly"
    ],
    "metadata": {
     "collapsed": false
@@ -244,6 +238,18 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.1 Use country shape example "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -361,6 +367,8 @@
     "# read countries shape file\n",
     "countries = ShapefileReader.readToGeometryRDD(sc, countries_file_path)\n",
     "countries_df = Adapter.toDf(countries, sedona)\n",
+    "\n",
+    "# create a temp view to use the sql interface\n",
     "countries_df.createOrReplaceTempView(\"country\")\n",
     "countries_df.printSchema()"
    ],
@@ -463,6 +471,18 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.2 Use french commune example"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
