--- a/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
+++ b/notebooks/pyspark/advance/S02_Sedona/05.Calculate_distance.ipynb
@@ -243,7 +243,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3.1 Use country shape example "
+    "### 3.1 Use country shape example"
    ],
    "metadata": {
     "collapsed": false,
@@ -1068,12 +1068,223 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.2 Calculate the distance of two french commune\n",
+    "\n",
+    "\n",
+    "id,code_insee,role"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "from pyspark.sql.functions import col\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "spark = SparkSession.builder\\\n",
+    "    .master(\"local[4]\")\\\n",
+    "    .appName(\"GraphX\")\\\n",
+    "    .config(\"spark.driver.memory\", \"4g\")\\\n",
+    "    .config('spark.jars.packages','graphframes:graphframes:0.8.2-spark3.2-s_2.12') \\\n",
+    "    .getOrCreate()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "geo_df= spark.createDataFrame([(94100, \"P1\"),\n",
+    "                              (94101, \"P2\"),\n",
+    "                              (94102, \"P3\"),\n",
+    "                             (94103, \"P4\"),\n",
+    "                            (92100, \"P5\"),\n",
+    "                            (93100, \"P6\")], ['code_insee', 'polygone'])\n",
+    "\n",
+    "vertices = spark.createDataFrame([('1', 94100, -1),\n",
+    "                                  ('2', 94101, -1),\n",
+    "                                 ('3', 94102, -1),\n",
+    "                                  ('4', 94103, -1),\n",
+    "                                 ('98', 92100, 1),\n",
+    "                                 ('99', 93100, 2)],\n",
+    "                                 ['id', 'code_insee', 'role'])\n",
+    "\n",
+    "edges = spark.createDataFrame([('1', '98', 'treat'),\n",
+    "                               ('2', '98', 'treat'),\n",
+    "                               ('3', '98', 'treat'),\n",
+    "                               ('4', '98', 'treat'),\n",
+    "                               ('1', '99', 'treat'),\n",
+    "                               ('2', '99', 'treat'),\n",
+    "                               ('3', '99', 'treat'),\n",
+    "                               ('4', '99', 'treat'),\n",
+    "                              ],\n",
+    "                              ['src', 'dst', 'type'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+--------+---+----+\n",
+      "|code_insee|polygone| id|role|\n",
+      "+----------+--------+---+----+\n",
+      "|     92100|      P5| 98|   1|\n",
+      "|     93100|      P6| 99|   2|\n",
+      "|     94100|      P1|  1|  -1|\n",
+      "|     94101|      P2|  2|  -1|\n",
+      "|     94102|      P3|  3|  -1|\n",
+      "|     94103|      P4|  4|  -1|\n",
+      "+----------+--------+---+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "geo_vertices = geo_df.join(vertices,\"code_insee\",\"inner\")\n",
+    "geo_vertices.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+-----+--------------+------------+\n",
+      "|src|dst| type|code_insee_src|polygone_src|\n",
+      "+---+---+-----+--------------+------------+\n",
+      "|  1| 98|treat|         94100|          P1|\n",
+      "|  2| 98|treat|         94101|          P2|\n",
+      "|  3| 98|treat|         94102|          P3|\n",
+      "|  4| 98|treat|         94103|          P4|\n",
+      "|  1| 99|treat|         94100|          P1|\n",
+      "|  2| 99|treat|         94101|          P2|\n",
+      "|  3| 99|treat|         94102|          P3|\n",
+      "|  4| 99|treat|         94103|          P4|\n",
+      "+---+---+-----+--------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "edges_src = edges.join(geo_vertices,geo_vertices.id==edges.src,\"inner\").drop(\"id\",\"role\").withColumnRenamed(\"code_insee\",\"code_insee_src\").withColumnRenamed(\"polygone\",\"polygone_src\")\n",
+    "edges_src.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---+-----+--------------+------------+--------------+------------+\n",
+      "|src|dst| type|code_insee_src|polygone_src|code_insee_dst|polygone_dst|\n",
+      "+---+---+-----+--------------+------------+--------------+------------+\n",
+      "|  1| 98|treat|         94100|          P1|         92100|          P5|\n",
+      "|  2| 98|treat|         94101|          P2|         92100|          P5|\n",
+      "|  3| 98|treat|         94102|          P3|         92100|          P5|\n",
+      "|  4| 98|treat|         94103|          P4|         92100|          P5|\n",
+      "|  1| 99|treat|         94100|          P1|         93100|          P6|\n",
+      "|  2| 99|treat|         94101|          P2|         93100|          P6|\n",
+      "|  3| 99|treat|         94102|          P3|         93100|          P6|\n",
+      "|  4| 99|treat|         94103|          P4|         93100|          P6|\n",
+      "+---+---+-----+--------------+------------+--------------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "edges_full = edges_src.join(geo_vertices,geo_vertices.id==edges_src.dst,\"inner\").drop(\"id\",\"role\").withColumnRenamed(\"code_insee\",\"code_insee_dst\").withColumnRenamed(\"polygone\",\"polygone_dst\")\n",
+    "edges_full.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# example of calculate distance between src and dst polygone\n",
+    "edges_distance = sedona.sql(\"SELECT *, ST_Distance(c.polygone_src, c.polygone_dst) AS distance FROM edges_full as c ORDER BY distance DESC LIMIT 5\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   }
  ],
