update sedona install doc

--- a/notebooks/pyspark/basics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
+++ b/notebooks/pyspark/basics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
@@ -131,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-19T14:50:02.690590706Z",
-     "start_time": "2023-12-19T14:50:02.662400809Z"
+     "end_time": "2024-01-10T13:49:42.953887016Z",
+     "start_time": "2024-01-10T13:49:42.162929942Z"
     }
    },
    "outputs": [],
@@ -154,14 +154,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-19T14:50:04.680874748Z",
-     "start_time": "2023-12-19T14:50:04.587598694Z"
+     "end_time": "2024-01-10T13:49:58.540268655Z",
+     "start_time": "2024-01-10T13:49:44.927785425Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/01/10 14:49:51 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "24/01/10 14:49:51 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/01/10 14:49:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "local=True\n",
     "\n",
@@ -182,14 +206,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     },
     "ExecuteTime": {
-     "end_time": "2023-12-20T09:43:41.259605461Z",
-     "start_time": "2023-12-20T09:43:40.862579260Z"
+     "end_time": "2024-01-10T13:50:09.515316709Z",
+     "start_time": "2024-01-10T13:50:00.762482017Z"
     }
    },
    "outputs": [
@@ -202,7 +226,20 @@
       " |-- name: string (nullable = true)\n",
       " |-- date_str: string (nullable = true)\n",
       " |-- product: string (nullable = true)\n",
-      " |-- price: long (nullable = true)\n",
+      " |-- price: long (nullable = true)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 0:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+----+----------+---------+-----+\n",
       "|name|date_str  |product  |price|\n",
       "+----+----------+---------+-----+\n",
@@ -220,6 +257,13 @@
       "|Bob |2018-03-03|Brushes  |30   |\n",
       "|Bob |2018-09-26|Sandpaper|10   |\n",
       "+----+----------+---------+-----+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -246,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -257,7 +301,6 @@
       " |-- product: string (nullable = true)\n",
       " |-- price: long (nullable = true)\n",
       " |-- date: date (nullable = true)\n",
-      "\n",
       "+----+---------+-----+----------+\n",
       "|name|  product|price|      date|\n",
       "+----+---------+-----+----------+\n",
@@ -286,8 +329,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-12-20T09:43:42.732877353Z",
-     "start_time": "2023-12-20T09:43:42.462458546Z"
+     "end_time": "2024-01-10T13:50:12.574664673Z",
+     "start_time": "2024-01-10T13:50:11.533129032Z"
     }
    }
   },
