add test script

--- a/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
+++ b/notebooks/pyspark/advance/S03_Spark_submit/midares_test_script_1.ipynb
@@ -8,9 +8,118 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
    "source": [
-    ""
-   ]
+    "from datetime import datetime\n",
+    "\n",
+    "from pyspark.sql import SparkSession, DataFrame\n",
+    "from pyspark.sql.types import StringType\n",
+    "from pyspark.sql.functions import udf, col, split, when"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T12:55:38.322383489Z",
+     "start_time": "2024-05-06T12:55:37.589093356Z"
+    }
+   },
+   "id": "9afea461edbb964d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/05/06 14:55:43 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "24/05/06 14:55:43 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/05/06 14:55:44 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .master(\"local\") \\\n",
+    "    .appName(\"Midares test job\") \\\n",
+    "    .getOrCreate()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T12:55:52.603218327Z",
+     "start_time": "2024-05-06T12:55:37.902307340Z"
+    }
+   },
+   "id": "1d9a28975edec8f6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "pjc_path= \"/home/pengfei/git/PySparkCommonFunc/data/midares/PJC.csv\"\n",
+    "pjc_df_1 = spark.read.csv(pjc_path,header=True, inferSchema=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2038d360cf162ec2"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "pjc_df_1.printSchema()"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "44b58b52b49fe642"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "print(pjc_df_1.show())"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "64db01e662e67488"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "621a74fabb6e7293"
   }
  ],
  "metadata": {
